# DecisionTreeClassifier

./: CLI_USAGE.md  TEST_SUMMARY.md  drug200.csv  example_data.csv  model.json  predictions.csv  pyproject.toml  samp1.csv  test_data.csv
src/decisiontree/: __init__.py  cli.py  main.py  tree.py
src/decisiontree/ImpurityStrategy/: Entropy.py  GiniIndex.py  Strategy.py  __init__.py
tests/: test_entropy.py  test_gini.py  test_integration.py  test_tree.py
