[tool.poetry]
name = "decisiontree"
version = "0.1.0"
description = "A Decision Tree Classifier implementation"
authors = ["Santhosh Kumar Karthikeyan <santhoshkumarkarthikeyan5@gmail.com>"]
readme = "README.md"
packages = [{include = "decisiontree", from = "src"}]

[tool.poetry.scripts]
decisiontree = "decisiontree.cli:build_tree"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.2"
numpy = "^2.3.2"
rich = "^14.1.0"
questionary = "^2.1.0"
tabulate = "^0.9.0"
click = "^8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
